--- a/main.tex
+++ b/main.tex
@@ -201,6 +201,51 @@ In the very far future, Solar Life will spread beyond this solar system to take
 root amongst the stars. As it does so, it may encounter Life from other sources
 with which to commune.  Just imagine the possibilities!
 
+\imagefacingchapter{images/TakeRootAmongstTheStars-comp}
+\chapter{SolSeed's Intelligent Spark}
+
+\setlength\epigraphwidth{2.7in}
+\epigraph{
+  As SolSeed's intelligent spark,\\
+  \tab we are called to nurture Life,\\
+  \tab we are called to fulfill The Destiny.
+}{}
+
+\noindent The history of life is a many branching tree and humanity is just one
+branch on that tree. When inhabitants of the far future look back on humanity
+as it is now, they will see not the pinnacle of evolution, but a transitional
+species that diverged into new branches in the tree of life. Our place in the
+body of all life is not one of special rights and privileges, but rather one of
+purpose and responsibility. As Life's intelligent spark we are called to
+nurture the body of all life -- we are called to ensure that it survives and
+flourishes.
+
+\begin{quote}
+\em
+Our obligation to survive and flourish is owed not just to ourselves but also
+to that Cosmos ancient and vast from which we spring. --Carl Sagan
+\end{quote}
+
+We are called not just to live -- not just to get by -- but to create a life
+that brings honor to all the ancestors who came before us. We are called to
+create a life that increases the opportunities of the generations that will
+follow us.
+
+Evolving humanity was expensive. It took eons to develop the biosphere and to
+deposit vast stores of fossil fuels. In the decades of our infancy we caused
+the extinction of myriad other species and consumed Life's densest reserves of
+concentrated energy. It will take a lot of doing to become worthy of our price.
+
+
+The extinctions we have caused and the fuels we have burned have purchased an
+infrastructure that we can use in service to Life. The ultimate expression of
+Life's flowering will come when we (the body of all life) transcend the bounds
+of this planet and firmly take root throughout our solar system and the rest of
+the galaxy. Humanity has an essential role to play in this ultimate expression
+of the upward spiral of Life.
+
+Humanity has a use, a role to play, a thing to do.
+
 
 % Last pages for ToC
 %-------------------------------------------------------------------------------
