Our Sacred Duty

--- a/main.tex
+++ b/main.tex
@@ -199,7 +199,7 @@ tremendously enlarged playground over which to diversify.
 
 In the very far future, Solar Life will spread beyond this solar system to take
 root amongst the stars. As it does so, it may encounter Life from other sources
-with which to commune.  Just imagine the possibilities!
+with which to commune.  Just think of the possibilities!
 
 \imagefacingchapter{images/TakeRootAmongstTheStars-comp}
 \chapter{SolSeed's Intelligent Spark}
@@ -245,6 +245,64 @@ the galaxy. Humanity has an essential role to play in this ultimate expression
 of the upward spiral of Life.
 
 Humanity has a use, a role to play, a thing to do.
+
+\imagefacingchapter{images/StainedGlass}
+% photos.com ... search StainedGlass
+\chapter{Our Sacred Duty}
+\setlength\epigraphwidth{3.0in}
+\epigraph{
+  Our sacred duty is to\\
+  embrace Passion,\\
+  cultivate Empathy, and\\
+  pursue Wisdom,\\
+  \tab So that our being honors SolSeed\\
+  \tab and our striving advances The Destiny.
+}{}
+
+\noindent The pursuit of scientific truth is one part of our religious purpose.
+There is no logical proof that such a pursuit is good. There are no experiments
+that we can do to demonstrate that an evidence based understanding of how the
+world works is a good goal for our lives. And yet, we devote ourselves to this
+pursuit as a higher calling. The importance of pursuing scientific truth is a
+given in our lives that is as obvious as our own existence.
+
+Beyond just scientific truth, we are called to devote our lives to expressing
+the Arete of Life. We find tremendous uplifting significance in fully living up
+to our potential, both individually and collectively. Together we ought to help
+Life take root and flower amongst the stars. Individually we ought to flower
+ourselves within our local communities. Fully expressing the Arete of Life
+brings honor to the unbroken thread of ancestors who made our lives possible.
+
+The significance of this purpose is not rationally determined, but is basic to
+our very nature. Similarly, the values from which this purpose springs are our
+aethetic reactions to direct individual spiritual experiences.
+
+Expressing the Arete of Life is our purpose. Our religion is not this purpose,
+but rather the activity of whole heartedly pursuing it. We strive to constantly
+strengthen and promote the values and goals underlying our religious movement
+... not because our religion demands it of us, but because the values and
+purpose are the essential expression of our nature.
+
+To be effective in the long term pursuit of our values and purpose we benefit
+from inspiration, clarity, and practice. When we are passionately inspired, we
+work powerfully toward our goals. When our values are clear, we know how to
+behave and what to pursue. Individual and collective practice keeps us
+connected to regular sources of inspiration and clarity. These regular
+practices create unconscious habits of being. These habits of being train us to
+instinctively react to even the most difficult situations with responses that
+align with our highest aspirations.
+
+Evocative stories and symbols speak to our unconscious minds and provide a
+short-cut pathway back to the well of inspiration that keeps us motivated.
+Regular practice with a community of like-minded indviduals keeps us rolling in
+our chosen direction even when we lack inspiration and the urgency of everday
+life distract us from our super-personal purpose.
+
+The power of our religion comes not from its unique access to ``True values and
+purposes'', but rather from its ability to provide us with the support to
+effectively live the values we have chosen --- indeed --- the values that
+have chosen us!
+
 
 
 % Last pages for ToC
