Passion Drives Us

--- a/main.tex
+++ b/main.tex
@@ -304,6 +304,39 @@ effectively live the values we have chosen --- indeed --- the values that
 have chosen us!
 
 
+\imagefacingchapter{images/RidingElephant}
+\chapter{Passion Drives Us}
+\setlength\epigraphwidth{2.8in}
+\epigraph{
+  Passion drives us.\\
+  Without Passion,\\
+  \tab Empathy and Wisdom are impotent.
+}{}
+
+\noindent There was a time in my life when the most common thing you'd hear
+from me was a sigh. Life was futile, tasteless and bland. It took all of my
+reserves to meet the minimums. This ``sighing'' period of my life lasted for
+months. Things got dramatically better when I began treatment for depression.
+Suddenly I was full of ideas and brimming over with energy to try new things.
+
+The contrast between these two adjacent periods of my life was startling. I,
+the same person, could be more or less alive. I went from seeing Life as a
+binary property where I was either alive or dead, to seeing Life as a
+continuous property. An individual organism, a group of organisms, and indeed
+the body of all life could be more or less alive from moment to moment.
+
+We are only powerful when we are fully, passionately alive. We only do great
+and beautiful things when we have enough gumption to get off the couch and take
+action. If we lack the will to act, our best and wisest intentions come to nothing.
+
+Passion is individualistic; it drives us to care for and nurture ourselves, and
+to work toward our own personal goals and dreams. Our Empathy projects our
+Passion onto others, causing us to likewise care for and nurture them. Our love
+for others can only be as strong and healthy as is our love for ourself.
+Without Passion, Empathy is hollow.
+
+Passion inspires and motivates us. Passion is our source of power!
+
 
 % Last pages for ToC
 %-------------------------------------------------------------------------------
