--- a/main.tex
+++ b/main.tex
@@ -332,10 +332,83 @@ action. If we lack the will to act, our best and wisest intentions come to nothi
 Passion is individualistic; it drives us to care for and nurture ourselves, and
 to work toward our own personal goals and dreams. Our Empathy projects our
 Passion onto others, causing us to likewise care for and nurture them. Our love
-for others can only be as strong and healthy as is our love for ourself.
+for others can only be as strong and healthy as is our love for ourselves.
 Without Passion, Empathy is hollow.
 
 Passion inspires and motivates us. Passion is our source of power!
+
+\chapter{Embrace Passion}
+\setlength\epigraphwidth{3.0in}
+\epigraph{
+  I pledge to compassionately care for myself,\\
+  to embrace my animal nature,\\
+  to really be me, Happy in the Sun!
+}{}
+
+\noindent The disparity between our goals and our actions leads us to be cruel
+to ourselves. We use words like disappointment, lazy, and selfish to try and
+whip ourselves into shape. The hurt and shame we inflict on ourselves fails to
+bring about the changes we desire. We turn to addictive vices to escape our
+self abuse.  The cycle of disappointment, abuse, and escapism continues.
+
+Metaphors are powerful. They are how we make sense of the world and our place
+in it. Perhaps no metaphor is more important than our metaphor for ourselves.
+By adopting a more accurate self image we can foster compassion for ourselves
+and finally discover the keys to realizing our highest aspirations.
+
+In an age of cars, machines, and computers it is tempting to adopt a metaphor
+of self that places our conscious mind in the role of operator and the rest of
+us as the machine that is being operated. This metaphor is grossly inaccurate
+and provides little insight about how to create what we seek to create in the
+world.
+
+One of the ancient truths that has been discovered over and over and commented
+on by many different authors is the notion of the divided self. We are not
+simply a conscious mind operating a piece of biological machinery. We are
+actually a collection of different systems cooperating and competing to
+accomplish their own individual goals. Not all of these systems are equally
+intelligent, nor equally powerful.
+
+In his book ''The Happiness Hypothesis'', social scientist Jonathan Haidt takes
+a look at various metaphors for self that have received widespread attention
+throughout the years. He then suggests that we adopt the model of our conscious
+mind as a rider on top of the elephant of our unconscious mind and body.
+Roughly speaking, the rider represents conscious reasoning and the elephant
+represents instinct and emotional reactions. This simple metaphor does much to
+explain day-to-day life.
+
+The model of a rider and an elephant is particularly good at explaining the
+differences between what we say our goals are and our actual behavior. The only
+part of the rider-elephant combination that we have direct cognitive access to
+is the rider. Any time we say something voluntarily, it is the rider who is
+speaking (while the elephant is responsible for things like the reflexive yell
+of pain on touching a hot stove). So when we talk about our goals, we give a
+one-sided account that only incorporates what our rider wants.
+
+The rider will inevitably lose a direct contest of wills against our elephant.
+A skilled rider understands this and works sideways to create an environment in
+which the pair can be successful. This means shaping the stimuli that the
+elephant has access to, in order to limit exposure to undesirable situations
+that take the elephant down a destructive path, and to increase exposure to
+situations that lead to instinctive or emotional responses that motivate
+positive action.
+
+Several years ago I happened upon a picture whose caption struck a chord in me
+that resonates to this day. Our family was in the market to join a community
+supported agriculture (CSA) program. As we browsed the websites for the various
+CSAs in our area we happened across a picture of some sugar pea sprouts along
+with the caption ``happy in the sun!''
+
+``Happy in the sun!'' There was nothing complicated about the image or the
+caption. The sprouts were simply being sprouts. And yet, there is something
+profound about the phrase ``happy in the sun!'' and the way it was juxtaposed
+with those sprouts. Those sprouts were living up to their potential. They were
+in some sense ``fully alive,'' the very picture of thriving and flourishing.
+
+The path to a beautiful, happy life runs through the elephant. Our riders must
+realize and accept that they exist to serve the goals and aspirations of our
+elephants. Passion belongs to the elephant, it alone knows your ``happy in the
+sun!''
 
 
 % Last pages for ToC
