--- a/main.tex
+++ b/main.tex
@@ -304,7 +304,7 @@ effectively live the values we have chosen --- indeed --- the values that
 have chosen us!
 
 
-\imagefacingchapter{images/RidingElephant}
+\imagefacingchapter{images/Elephant}
 \chapter{Passion Drives Us}
 \setlength\epigraphwidth{2.8in}
 \epigraph{
@@ -337,6 +337,7 @@ Without Passion, Empathy is hollow.
 
 Passion inspires and motivates us. Passion is our source of power!
 
+\imagefacingchapter{images/RidingElephant}
 \chapter{Embrace Passion}
 \setlength\epigraphwidth{3.0in}
 \epigraph{
@@ -405,10 +406,11 @@ profound about the phrase ``happy in the sun!'' and the way it was juxtaposed
 with those sprouts. Those sprouts were living up to their potential. They were
 in some sense ``fully alive,'' the very picture of thriving and flourishing.
 
-The path to a beautiful, happy life runs through the elephant. Our riders must
-realize and accept that they exist to serve the goals and aspirations of our
-elephants. Passion belongs to the elephant, it alone knows your ``happy in the
-sun!''
+The path to a thriving, flourishing life runs through our elephant. The
+beautiful life we seek depends upon our rider becoming a clever servant rather
+than a cruel tyrant. Passion belongs to our elephant, it alone knows our unique
+``happy in the sun!''
+
 
 
 % Last pages for ToC
