--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,7 @@
 % You should have received a copy of the license along with this
 % work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.
 \documentclass[ebook,12pt,openany,twoside]{memoir}
-\usepackage[latin1]{inputenc}
+\usepackage[utf8]{inputenc}
 \usepackage{setspace}
 \usepackage{tocloft}
 \usepackage{graphicx}
