Venerable Life (instead of Life is Precious)

--- a/main.tex
+++ b/main.tex
@@ -146,7 +146,7 @@
 
 
 \imagefacingchapter{images/LifeIsWorthyOfVeneration}
-\chapter{Life is Precious}
+\chapter{Venerable Life}
 
 \setlength\epigraphwidth{2.25in}
 \epigraph{
