The Nature of Life (instead of the Upward Spiral) with significant revision

--- a/main.tex
+++ b/main.tex
@@ -179,46 +179,37 @@ still still be precious. Always and forever, Life is what it is \ldots and it
 is worthy of veneration!
 
 \imagefacingchapter{images/UpwardSpiral}
-\chapter{The Upward Spiral of Life}
+\chapter{The Nature of Life}
 
 \setlength\epigraphwidth{3.6in}
 \epigraph{
-  Life creates the conditions for more Life,\\
-  \tab in an Upward Spiral of ever-growing possibilities.\\
+  Life exuberant\\
+  bursting through boundaries\\
+  must flower and spread\\
+  \tab creating the conditions for more Life,\\
+  \tab in an Upward Spiral of ever-growing possibilities.
 }{}
 
-\noindent Every one of us knows from personal experience that it is easier to
-destroy things than it is to create them. In fact, we don't even need to exert
-ourselves to destroy things. If we just ignore them for a while they will erode
-and disappear. The destruction of possibility is the natural order of things.
-Scientists call this tendency for things to run down the ``second law of
-thermodynamics.'' The second law can be summarized as ``energy always flows
-downhill toward less and less usable forms.''
+\noindent It is the nature of Life to flower and spread. During the Devonian
+some 420 million years ago, Life burst out of the sea and took root on the
+land. The period of adaptive radiation that followed drove an upward spiral of
+innovation creating increasingly more complex expressions of Life.
 
-And yet many wondrously complex things do exist! In our world that is strongly
-biased towards decay and collapse, how is this possible?
+It is awesome to realize that complex Life exists even though our universe is
+strongly biased toward decay and collapse. We know from personal experience
+that it is much easier to destroy than it is to create. Scientists call the
+tendency for things to run down the ``second law of thermodynamics.'' The
+second law can be summarized as ``energy always flows downhill toward less and
+less usable forms.''
 
-Life is the force that creates an upward eddy in the downward current of
-destruction. Creation by life is a process of slow growth. The laying down of
-one layer on top of another. This slow process of creation often spans
-generations.
-
-Turning to Paul Krafel's ``The Upward Spiral'', we find succession as more than
-just a brutal competition in which taller plants shade out shorter plants. In
-fact, the shorter plants that came first created the conditions that allowed
-the taller plants to exist at all. The story is about competition, but it is
-not just about competition. It is also a story of multi-generational,
-multi-species cooperation to slowly raise up greater and greater possibilities.
-
-The process of evolution that created the wonderful diversity of species is a
-long slow steady climb. And like the story of succession, it is a story of
-competition AND a story of cooperation. The long slow steady climb of evolution
-is the story of the creation of possibilities by countless individuals making
-countless contributions across countless generations.
+Life is the force that sometimes creates an upward eddy in the downward current
+of destruction. The process of evolution that created the wonderful diversity
+of species is a long slow steady climb. It is the story of the creation of
+possibilities by countless individuals unwittingly making countless
+contributions across countless generations.
 
 Ants carrying, eagles soaring, people loving \ldots none of these would exist
-without Life's slow and steady creation. Life creates an upward spiral of
-ever-growing possibilities!
+without Life's slow and steady upward spiral of creation.
 
 \imagefacingchapter{images/BodyOfAllLife-cropped}
 \chapter{SolSeed: The Body of All Life}
