--- a/main.tex
+++ b/main.tex
@@ -226,10 +226,10 @@ without Life's slow and steady upward spiral of creation.
 \noindent Groups of people may be organized into bodies. When we regard a
 number of individuals as a single entity, we refer to the group as a ``body''.
 We have legislative bodies, student bodies, administrative bodies, governing
-bodies, and church bodies. Bodies are in some way more than the sum of the
+bodies, and religious bodies. Bodies are in some way more than the sum of the
 individuals. We expect a body of people to generate ideas and think about
-things in a way that is different from what the individuals alone would come up
-with.
+things in a way that is different from what the individuals working alone would
+come up with.
 
 Groups of cells may also be organized into bodies.  The cells in your body don't
 know who you are and don't care about you. And yet, by each cell doing its own
@@ -239,10 +239,10 @@ you emerges!
 Just like our body is composed of cells that each do their own different unique
 thing, so too there is a body of all life composed of living organisms of which
 we are a part. This body of all Life has many names. We call it SolSeed. Sol
-out of respect for the star at the center of our system that provides
-practically all the energy that animates Life on Earth, and Seed to focus our
-attention on the myriad possibilities latent in the complex biosystem Life has
-created by storing the gift of energy that comes from Sol.
+out of gratitude for the star at the center of our system that provides
+practically all the energy that animates Life on Earth, and Seed to remind us
+of the tremendous possibilities latent in the complex biosystem Life has
+created by organizing the gift of energy that comes from Sol.
 
 \imagefacingchapter{images/MotherEarthFatherSun}
 \chapter{Life Takes Root, Flowers, and Spreads}
