rename to "Life Expressed!" and rework

--- a/main.tex
+++ b/main.tex
@@ -245,28 +245,21 @@ of the tremendous possibilities latent in the complex biosystem Life has
 created by organizing the gift of energy that comes from Sol.
 
 \imagefacingchapter{images/MotherEarthFatherSun}
-\chapter{Life Takes Root, Flowers, and Spreads}
+\chapter{Life Expressed!}
 
-\setlength\epigraphwidth{3.0in}
+\setlength\epigraphwidth{3.2in}
 \epigraph{
   The Destiny of SolSeed\\
-  is to take root amongst the stars ---\\
+  is to take root and flower amongst the stars ---\\
   \tab to give birth to a family of living worlds.
 }{}
 
-\noindent It is the nature of Life to flower and spread. During the Devonian
-some 420 million years ago, Life burst out of the sea and took root on the
-land. Life greatly diversified and began to substantially affect the landscape.
-The changes Life made to the landscape created opportunities for even more
-Life. This upward spiral of adaptive radiation was a period of intense
-innovation leading to more and more possibilities for Life.
-
-The evolution of Life in our solar system is far from complete. Earth Life is
-now poised to burst off of our planet and take root amongst the other bodies of
-our Solar system. The adaptive radiation that follows will again be a period of
-tremendous innovation for Life. Life will begin to substantially affect the
-rest of the Solar system. The changes Life will make will create opportunities
-for even more Life.
+\noindent The evolution of Life in our solar system is far from complete. Earth
+Life is now poised to burst off of our planet and take root amongst the other
+bodies of our Solar system. The adaptive radiation that follows will again be a
+period of tremendous innovation for Life. Life will begin to substantially
+affect the rest of the Solar system. The changes Life will make will create
+opportunities for even more Life.
 
 Mother Earth and Father Sun are ready to start a family. Instead of our solar
 system containing a single, lonely living world, there will be a family of
