--- a/main.tex
+++ b/main.tex
@@ -271,28 +271,23 @@ root amongst the stars. As it does so, it may encounter Life from other sources
 with which to commune.  Just think of the possibilities!
 
 \imagefacingchapter{images/TakeRootAmongstTheStars-comp}
-\chapter{SolSeed's Intelligent Spark}
+\chapter{Called}
 
-\setlength\epigraphwidth{2.7in}
+\setlength\epigraphwidth{3.2in}
 \epigraph{
   As SolSeed's intelligent spark,\\
-  \tab we are called to nurture Life,\\
+  \tab we are called to express the Arete of Life,\\
   \tab we are called to fulfill The Destiny.
 }{}
 
-\noindent The history of life is a many branching tree and humanity is just one
-branch on that tree. When inhabitants of the far future look back on humanity
-as it is now, they will see not the pinnacle of evolution, but a transitional
-species that diverged into new branches in the tree of life. Our place in the
-body of all life is not one of special rights and privileges, but rather one of
-purpose and responsibility. As Life's intelligent spark we are called to
-nurture the body of all life -- we are called to ensure that it survives and
-flourishes.
+\noindent Our place in the body of all life is not one of special rights and
+privileges, but rather one of great purpose and responsibility. In the words of
+Carl Sagan,
 
 \begin{quote}
 \em
 Our obligation to survive and flourish is owed not just to ourselves but also
-to that Cosmos ancient and vast from which we spring. --Carl Sagan
+to that Cosmos ancient and vast from which we spring.
 \end{quote}
 
 We are called not just to live -- not just to get by -- but to create a life
