Dedicated chapter (no image yet)

--- a/main.tex
+++ b/main.tex
@@ -310,6 +310,35 @@ of the upward spiral of Life.
 
 Humanity has a use, a role to play, a thing to do.
 
+\chapter{Dedicated}
+\setlength\epigraphwidth{3.0in}
+\epigraph{
+  We who answer this call\\
+  devote ourselves to Life.\\
+  \tab We join together\\
+  \tab in a community of practice\\
+  \tab to align our actions\\
+  \tab with our highest aspirations.
+}{}
+
+\noindent Many of life's choicest rewards come from being in relationship with
+others. Our most important relationships gain special potency when they are
+formed within the context of a larger shared purpose. Regular practice with a
+community of like-minded indviduals keeps us rolling in our chosen direction
+even when we lack inspiration and are overwhelmed by the concerns of everday
+life.
+
+We join together in community in order to bring out the best in ourselves and
+each other. We fan the flames of enthusiasm to nurture and encourage our
+beginner selves. We call for a deepening of wisdom to uncover and let shine the
+greatness in each of us. We direct the fire of passion down the line of
+practical inquiry that brings with it understanding and faculty. We cultivate
+habits that train us to instinctively react to even the most difficult
+situations with responses that align with our highest aspirations.
+
+Simply stated, Life is better when lived together.
+
+
 \imagefacingchapter{images/StainedGlass}
 % photos.com ... search StainedGlass
 \chapter{Our Sacred Duty}
