Awakening (cosmic religious feeling) chapter … no image yet

--- a/main.tex
+++ b/main.tex
@@ -339,6 +339,31 @@ situations with responses that align with our highest aspirations.
 Simply stated, Life is better when lived together.
 
 
+\chapter{Awakening}
+\setlength\epigraphwidth{3.0in}
+\epigraph{
+  Through art and the natural world\\
+  we awaken within ourselves and others\\
+  \tab the cosmic religious feeling\\
+  \tab that ignites wonder,\\
+  \tab fosters compassion, and\\
+  \tab inspires us to proactively create.
+}{}
+
+There is a way of experiencing the world that is profoundly different than our
+usual ego-centric mode. It feels like waking up to the true order of things.
+The boundary between self and other dissolves as we directly experience the
+universe as a single significant whole. We feel the futility of grasping after
+things. In place of our habitual drive to react we find an empty space from
+which to proactively initiate change.
+
+This cosmic religious feeling is difficult to communicate from person to
+person. It may be awakened or enlivened through a growing sense of awe or
+uplifting emotion as we experience beauty, nobility, grandeur, or immensity.
+These sublime experiences seem to often arise from the contemplation of art,
+science, and nature. Individual and collective practice keeps us regularly
+connected to these sources of inspiration.
+
 \imagefacingchapter{images/StainedGlass}
 % photos.com ... search StainedGlass
 \chapter{Our Sacred Duty}
