rename to Sacred Practice

--- a/main.tex
+++ b/main.tex
@@ -366,14 +366,14 @@ connected to these sources of inspiration.
 
 \imagefacingchapter{images/StainedGlass}
 % photos.com ... search StainedGlass
-\chapter{Our Sacred Duty}
+\chapter{Sacred Practice}
 \setlength\epigraphwidth{3.0in}
 \epigraph{
   Our sacred duty is to\\
   embrace Passion,\\
   cultivate Empathy, and\\
   pursue Wisdom,\\
-  \tab So that our being honors SolSeed\\
+  \tab So that our being honors Life\\
   \tab and our striving advances The Destiny.
 }{}
 
