--- a/main.tex
+++ b/main.tex
@@ -361,7 +361,7 @@ Humanity has a use, a role to play, a thing to do.
 others. Our most important relationships gain special potency when they are
 formed within the context of a larger shared purpose. Regular practice with a
 community of like-minded indviduals keeps us rolling in our chosen direction
-even when we lack inspiration and are overwhelmed by the concerns of everday
+even when we lack inspiration and are overwhelmed by the concerns of everyday
 life.
 
 We join together in community in order to bring out the best in ourselves and
