our sacred purpose

--- a/main.tex
+++ b/main.tex
@@ -426,42 +426,21 @@ world works is a good goal for our lives. And yet, we devote ourselves to this
 pursuit as a higher calling. The importance of pursuing scientific truth is a
 given in our lives that is as obvious as our own existence.
 
-Beyond just scientific truth, we are called to devote our lives to expressing
-the Arete of Life. We find tremendous uplifting significance in fully living up
-to our potential, both individually and collectively. Together we ought to help
-Life take root and flower amongst the stars. Individually we ought to flower
-ourselves within our local communities. Fully expressing the Arete of Life
-brings honor to the unbroken thread of ancestors who made our lives possible.
+Greater even than our commitment to scientific truth is our devotion to expressing the full Arete of Life. We find tremendous uplifting significance in fully living up to our
+potential, both individual and collective. As individuals we flower within our
+local communities. Together we help Life take root and flower amongst the
+stars. Fully expressing the Arete of Life brings honor to the unbroken thread
+of ancestors who made our lives possible. The significance of this purpose is not rationally determined, but is basic to
+our very nature. Similarly, the values from which this purpose springs have developed through our individual aesthetic reactions to direct individual experiences of profound meaning.
 
-The significance of this purpose is not rationally determined, but is basic to
-our very nature. Similarly, the values from which this purpose springs are our
-aethetic reactions to direct individual spiritual experiences.
-
-Expressing the Arete of Life is our purpose. Our religion is not this purpose,
-but rather the activity of whole heartedly pursuing it. We strive to constantly
+Our religion is not this purpose, but rather the activity of whole heartedly pursuing it. We strive to constantly
 strengthen and promote the values and goals underlying our religious movement
 ... not because our religion demands it of us, but because the values and
-purpose are the essential expression of our nature.
-
-To be effective in the long term pursuit of our values and purpose we benefit
-from inspiration, clarity, and practice. When we are passionately inspired, we
-work powerfully toward our goals. When our values are clear, we know how to
-behave and what to pursue. Individual and collective practice keeps us
-connected to regular sources of inspiration and clarity. These regular
-practices create unconscious habits of being. These habits of being train us to
-instinctively react to even the most difficult situations with responses that
-align with our highest aspirations.
-
-Evocative stories and symbols speak to our unconscious minds and provide a
-short-cut pathway back to the well of inspiration that keeps us motivated.
-Regular practice with a community of like-minded indviduals keeps us rolling in
-our chosen direction even when we lack inspiration and the urgency of everday
-life distract us from our super-personal purpose.
-
-The power of our religion comes not from its unique access to ``True values and
+purpose are the essential expression of our nature. The power of our religion comes not from its unique access to ``True values and
 purposes'', but rather from its ability to provide us with the support to
 effectively live the values we have chosen --- indeed --- the values that
 have chosen us!
+
 
 
 \imagefacingchapter{images/Elephant}
