rework passion chapters

--- a/main.tex
+++ b/main.tex
@@ -452,7 +452,13 @@ have chosen us!
   \tab Empathy and Wisdom are impotent.
 }{}
 
-\noindent There was a time in my life when the most common thing you'd hear
+\noindent The love for an endeavor is a greater gift than is natural aptitude for it.
+Natural aptitude alone will always be overtaken and surpassed by the ceaseless
+practice of those who love an activity. In the words of de Saint-Exup\'{e}ry,
+"if you would build a ship, don't tell people to gather wood and hammer nails,
+instead teach them to long for the endless wild sea."
+
+There was a time in my life when the most common thing you'd hear
 from me was a sigh. Life was futile, tasteless and bland. It took all of my
 reserves to meet the minimums. This ``sighing'' period of my life lasted for
 months. Things got dramatically better when I began treatment for depression.
@@ -468,20 +474,17 @@ We are only powerful when we are fully, passionately alive. We only do great
 and beautiful things when we have enough gumption to get off the couch and take
 action. If we lack the will to act, our best and wisest intentions come to nothing.
 
-Passion is individualistic; it drives us to care for and nurture ourselves, and
-to work toward our own personal goals and dreams. Our Empathy projects our
-Passion onto others, causing us to likewise care for and nurture them. Our love
-for others can only be as strong and healthy as is our love for ourselves.
-Without Passion, Empathy is hollow.
-
 Passion inspires and motivates us. Passion is our source of power!
+
+
+
 
 \imagefacingchapter{images/RidingElephant}
 \chapter{Embrace Passion}
 \setlength\epigraphwidth{3.0in}
 \epigraph{
-  I pledge to compassionately care for myself,\\
-  to embrace my animal nature,\\
+  I pledge to stoke the fire in my belly,\\
+  to compassionately care for my inner elephant ---\\
   to really be me, Happy in the Sun!
 }{}
 
@@ -533,21 +536,14 @@ that take the elephant down a destructive path, and to increase exposure to
 situations that lead to instinctive or emotional responses that motivate
 positive action.
 
-Several years ago I happened upon a picture whose caption struck a chord in me
-that resonates to this day. Our family was in the market to join a community
-supported agriculture (CSA) program. As we browsed the websites for the various
-CSAs in our area we happened across a picture of some sugar pea sprouts along
-with the caption ``happy in the sun!''
-
-``Happy in the sun!'' There was nothing complicated about the image or the
-caption. The sprouts were simply being sprouts. And yet, there is something
-profound about the phrase ``happy in the sun!'' and the way it was juxtaposed
-with those sprouts. Those sprouts were living up to their potential. They were
-in some sense ``fully alive,'' the very picture of thriving and flourishing.
+The single most important thing our rider can do is to understand what motivates our elephant and connect these motivators to our goals.  Such motivation does not come from clearly reasoned philosophical arguments.  Powerful motivation, the 'fire in our belly' so to speak, comes from stories and symbols that are experienced viscerally rather than cerebrally.  Evocative stories and symbols speak to our
+unconscious minds and provide a short-cut pathway back to the well of
+inspiration that keeps us motivated.
 
 The path to a thriving, flourishing life runs through our elephant. The
 beautiful life we seek depends upon our rider becoming a clever servant rather
-than a cruel tyrant. Passion belongs to our elephant, it alone knows our unique
+than a cruel tyrant. 
+Passion belongs to our elephant, it alone knows our unique
 ``happy in the sun!''
 
 
