rough cut at Empathy chapters

--- a/main.tex
+++ b/main.tex
@@ -548,6 +548,85 @@ Passion belongs to our elephant, it alone knows our unique
 
 
 
+
+
+
+
+\chapter{Empathy is Transcendent}
+
+\setlength\epigraphwidth{2.8in}
+\epigraph{
+  Empathy is transcendent.\\
+  Without Empathy,\\
+  \tab Passion and Wisdom are evil.
+}{}
+
+\noindent Empathy is the mechanism by which we understand and value others. Culture and society spring from Empathy (see Jonathan Haidt Righteous Mind
+Crossing the Rubric chapter). Without Empathy the deep understanding and trust
+so necessary for collective action cannot exist. It is Empathy that spurs us to
+value the needs of others and consider how our actions might impact them.
+
+It can be difficult to cultivate Empathy for strangers in other countries, for the entire body of all Life, and for future generations.  As we make our daily choices, we consider the needs of these abstract entities only as much as we identify with them in our guts.
+And so we create religious images, metaphors, and rituals to give life to these abstract aspirations so that we can relate to them as immediately as we relate to a friend or family member.
+
+Einstein as he developed the theory of relativity often imagined what
+it would be like to ride alongside a beam of light. I invite you to do
+something similar. Imagine yourself actually as a beam of light. A ray of
+sunshine from our star whose name is Sol. As this sunbeam, you have several
+different ways that you can think of yourself. On the one hand you are a
+transient burst of photons that will soon be absorbed and cease to exist. On
+the other hand you are the Sun itself. You are the provider of practically all
+the energy that animates life on earth.
+
+The ability to sometimes perceive ourselves not just as the ephemeral ray of
+light, but as the sun itself can add a great deal of power and purpose to our
+lives. This ability to identify with the larger whole is an essential
+characteristic of spiritual enlightenment. It offers freedom from reactive
+grasping and the option to proactively create our lives.
+
+
+
+
+
+\chapter{Cultivate Empathy}
+
+\setlength\epigraphwidth{2.8in}
+\epigraph{
+  I pledge to love others as I love myself,\\
+  to consider their needs as if they were my own ---\\
+  \tab to Grow Ours, not just Get Mine.
+}{}
+
+\noindent While it may be true that service of others provides happiness and life
+satisfaction for the person who is doing the serving, the motivation for the
+service is important. Something is missed when service to others is done to look good or even just
+because we know that service leads to a happier life. Service brings the most peace and satisfaction when it springs from a depth of character where such service is simply the
+right thing to do.
+
+There is a trap of motivation that may be called spiritual narcissism. People
+who seek after spiritual enlightenment, satisfaction, and peace as if they are
+the ends themselves rather than the byproduct of a life of service find
+themselves continually lacking peace and satisfaction. The more they focus on
+peace and satisfaction, the bigger the hole becomes that they are trying to
+fill.
+
+Part of the paradox stems from the realization that the person we have the most
+direct influence over is ourselves. This makes it seem like we ought to be
+working directly on ourselves. Counterintuitively growth and development of ourselves is fostered
+most directly by developing in ourselves a focus on others. This can be illustrated by
+the attributes of a great conversationalist. The best conversationalists are
+those who are actually interested in what the other person has to say. When the
+other person pauses, the interested listener naturally rephrases what they
+heard to verify they got it, or asks a question about something of particular
+interest. Contrast this with the person whose main motivation is being heard.
+The talker doesn't listen to the other person, instead they organize their own
+thoughts so they can start talking in the first gap that is left.
+
+Good religions demand that we live a life of character and
+that we help others because it is "the right thing to do." As we empathize with the people we are seeking to help, we also cultivate appreciation for the gift they are giving to us by allowing us to participate in the transformative vulnerability of accepting assistance.  The more we humbly appreciate this gift, the more easily we will see the world through their
+eyes, the more our actions in relationship with them will bring peace and satisfaction for everyone involved.
+
+In the fiddler on the roof, Tevye the main character, offers a chunk of cheese to a young stranger who is passing through his town.  Perchik, the young man, refuses ... insisting "I have no money and I'm not a beggar."  Tevye responds, "Ah, take it. It's a blessing for me to give."  The genuiness of the sentiment wins Perchik over, and he accepts the food with a slightly pompous "Very well.  For your sake."  "Thank you. Thank you" replies Tevye as he hands him the food.  Throughout this interchange the empathy the older Tevye feels for young Perchik is clear.  Both men experience an increase in grace and dignity.
 % Last pages for ToC
 %-------------------------------------------------------------------------------
 \newpage
