Correct line breaks in stand-alone creed

--- a/main.tex
+++ b/main.tex
@@ -94,8 +94,8 @@
 
   We who answer this call\\
   devote ourselves to Life.\\
-  \tab We join\\
-  \tab together in a community of practice\\
+  \tab We join together\\
+  \tab in a community of practice\\
   \tab to align our actions\\
   \tab with our highest aspirations.
 
