Update BodyOfAllLife image

--- a/main.tex
+++ b/main.tex
@@ -232,7 +232,7 @@ without Life's slow and steady upward spiral of creation.
 
 
 
-\imagefacingchapter{images/BodyOfAllLife-cropped}
+\imagefacingchapter{images/BodyOfAllLife}
 \chapter{SolSeed: The Body of All Life}
 
 \setlength\epigraphwidth{2.4in}
