Correct name for VenerableLife image

--- a/main.tex
+++ b/main.tex
@@ -153,7 +153,7 @@
 
 
 
-\imagefacingchapter{images/LifeIsWorthyOfVeneration}
+\imagefacingchapter{images/VenerableLife}
 \chapter{Venerable Life}
 
 \setlength\epigraphwidth{2.25in}
