--- a/main.tex
+++ b/main.tex
@@ -302,7 +302,7 @@ with which to commune.  Just think of the possibilities!
 
 
 
-\imagefacingchapter{images/TakeRootAmongstTheStars-comp}
+\imagefacingchapter{images/Called}
 \chapter{Called}
 
 \setlength\epigraphwidth{3.2in}
