--- a/main.tex
+++ b/main.tex
@@ -345,7 +345,7 @@ Humanity has a use, a role to play, a thing to do.
 
 
 
-
+\imagefacingchapter{images/Dedicated}
 \chapter{Dedicated}
 \setlength\epigraphwidth{3.0in}
 \epigraph{
