--- a/main.tex
+++ b/main.tex
@@ -376,7 +376,7 @@ Simply stated, Life is better when lived together.
 
 
 
-
+\imagefacingchapter{images/Awakening}
 \chapter{Awakening}
 \setlength\epigraphwidth{3.0in}
 \epigraph{
