--- a/main.tex
+++ b/main.tex
@@ -406,8 +406,7 @@ connected to these sources of inspiration.
 
 
 
-\imagefacingchapter{images/StainedGlass}
-% photos.com ... search StainedGlass
+\imagefacingchapter{images/SacredPractice}
 \chapter{Sacred Practice}
 \setlength\epigraphwidth{3.0in}
 \epigraph{
