--- a/main.tex
+++ b/main.tex
@@ -442,7 +442,7 @@ have chosen us!
 
 
 
-\imagefacingchapter{images/Elephant}
+\imagefacingchapter{images/PassionDrives}
 \chapter{Passion Drives Us}
 \setlength\epigraphwidth{2.8in}
 \epigraph{
