--- a/main.tex
+++ b/main.tex
@@ -478,9 +478,9 @@ Passion inspires and motivates us. Passion is our source of power!
 
 
 
-\imagefacingchapter{images/RidingElephant}
+\imagefacingchapter{images/EmbracePassion}
 \chapter{Embrace Passion}
-\setlength\epigraphwidth{3.0in}
+\setlength\epigraphwidth{3.4in}
 \epigraph{
   I pledge to stoke the fire in my belly,\\
   to compassionately care for my inner elephant ---\\
