--- a/main.tex
+++ b/main.tex
@@ -550,7 +550,7 @@ Passion belongs to our elephant, it alone knows our unique
 
 
 
-
+\imagefacingchapter{images/EmpathyIsTranscendant}
 \chapter{Empathy is Transcendent}
 
 \setlength\epigraphwidth{2.8in}
