--- a/main.tex
+++ b/main.tex
@@ -586,9 +586,8 @@ grasping and the option to proactively create our lives.
 
 
 
-
+\imagefacingchapter{images/CultivateEmpathy}
 \chapter{Cultivate Empathy}
-
 \setlength\epigraphwidth{2.8in}
 \epigraph{
   I pledge to love others as I love myself,\\
