--- a/main.tex
+++ b/main.tex
@@ -628,7 +628,7 @@ In the fiddler on the roof, Tevye the main character, offers a chunk of cheese t
 
 
 
-
+\imagefacingchapter{images/WisdomIsEffective}
 \chapter{Wisdom is Effective}
 
 \setlength\epigraphwidth{3.8in}
