--- a/main.tex
+++ b/main.tex
@@ -666,7 +666,7 @@ how we can actually make a positive difference in the world.
 
 
 
-
+\imagefacingchapter{images/PursueWisdom}
 \chapter{Pursue Wisdom}
 \setlength\epigraphwidth{3.8in}
 \epigraph{
