WeBringLife epigraph and image

--- a/main.tex
+++ b/main.tex
@@ -751,6 +751,22 @@ professors, commands almost universal trust even though they all admit that
 anything they say could turn out to be wrong.
 
 
+\imagefacingchapter{images/WeBringLife}
+\chapter{We Bring Life!}
+\setlength\epigraphwidth{3.8in}
+\epigraph{
+  Through Passion, Empathy, and Wisdom,\\
+  we have come to know that:\\
+  \tab We are Solseed\\
+  \tab children of the Earth and Sun\\
+  \tab awakened by starlight\\
+  \tab growing\\
+  \tab nurturing\\
+  \tab discovering\\
+  \tab We Bring Life!
+}{}
+
+
 \begin{quote}
 \em
   Don't tell me what you believe, show me what you do and I will tell you what you believe. --civil rights movement quote
