Tweak title page

--- a/main.tex
+++ b/main.tex
@@ -46,9 +46,9 @@
 
 %\pagenumbering{}
 % Set book title
-\title{\textbf{SolSeed Creed Commentary}}
+\title{\tiny{The SolSeed Movement}\\\large{\textbf{We Believe}}}
 % Include Author name and Copyright holder name
-\author{The SolSeed Movement}
+\author{\tiny{version 3.0}\\Brandon CS Sanders}
 \begin{titlingpage}
 \maketitle
 \end{titlingpage}
