bring into alignment with cover (awakening still needs decision)

--- a/main.tex
+++ b/main.tex
@@ -63,8 +63,8 @@
 \setlength\epigraphwidth{2.25in}
 \epigraph{
   Life is precious.\\
-  \tab It has always been precious,\\
-  \tab it will always be precious.
+  \tab It has always been precious.\\
+  \tab It will always be precious.
 }{}
 
 \noindent Life puts atoms together in very interesting ways. One configuration
@@ -105,8 +105,8 @@ is worthy of veneration!
 \epigraph{
   Life exuberant\\
   bursting through boundaries\\
-  must flower and spread\\
-  \tab creating the conditions for more Life,\\
+  to flower and spread\\
+  \tab creates the conditions for more Life,\\
   \tab in an Upward Spiral of ever-growing possibilities.
 }{}
 
@@ -254,7 +254,7 @@ Humanity has a use, a role to play, a thing to do.
 \setlength\epigraphwidth{3.0in}
 \epigraph{
   We who answer this call\\
-  devote ourselves to Life.\\
+  dedicate ourselves to Life.\\
   \tab We join together\\
   \tab in a community of practice\\
   \tab to align our actions\\
