remove duplicated word

--- a/main.tex
+++ b/main.tex
@@ -87,7 +87,7 @@ would be just another dead ball of rock.
 
 Nothing needs to change for Life to become ``worthy''. It already is worthy.
 Even if we had more wars, more hunger, and more systemic injustice, Life would
-still still be precious. Always and forever, Life is what it is \ldots and it
+still be precious. Always and forever, Life is what it is \ldots and it
 is worthy of veneration!
 
 
