remove "We know … personal experience"

--- a/main.tex
+++ b/main.tex
@@ -116,11 +116,10 @@ land. The period of adaptive radiation that followed drove an upward spiral of
 innovation creating increasingly more complex expressions of Life.
 
 It is awesome to realize that complex Life exists even though our universe is
-strongly biased toward decay and collapse. We know from personal experience
-that it is much easier to destroy than it is to create. Scientists call the
-tendency for things to run down the ``second law of thermodynamics.'' The
-second law can be summarized as ``energy always flows downhill toward less and
-less usable forms.''
+strongly biased toward decay and collapse. Scientists call the tendency for
+things to run down the ``second law of thermodynamics.'' The second law can be
+summarized as ``energy always flows downhill toward less and less usable
+forms.''
 
 Life is the force that sometimes creates an upward eddy in the downward current
 of destruction. The process of evolution that created the wonderful diversity
@@ -235,7 +234,6 @@ Evolving humanity was expensive. It took eons to develop the biosphere and to
 deposit vast stores of fossil fuels. In the decades of our infancy we caused
 the extinction of myriad other species and consumed Life's densest reserves of
 concentrated energy. It will take a lot of doing to become worthy of our price.
-
 
 The extinctions we have caused and the fuels we have burned have purchased an
 infrastructure that we can use in service to Life. The ultimate expression of
